--- a/DB/샤딩/이수영.md
+++ b/DB/샤딩/이수영.md
@@ -9,6 +9,27 @@ DB 샤딩은 DB에 존재하는 데이터를 좀 더 관리하기 쉽게 작은 
 - 먼저, 분할된 DB 서버로의 라우팅을 위해서 구분할 수 있는 유니크한 키값이 필요합니다.
 - 설정으로 쉽게 증설이 가능해야 합니다.
 
+### 샤딩 종류
+
+- **모듈러 샤딩**
+    - PK를 모듈러 연산한 결과로 DB를 라우팅하는 방식입니다.
+    - 레인지 샤딩에 비해 데이터가 균일하게 분산된다는 특징이 있고
+        - 이는 트래픽을 안정적으로 소화하면서도 DB 리소스를 최대한 활용할 수 있다는 의미입니다.
+    - DB를 추가 증설하는 과정에서 이미 적재된 데이터의 재정렬이 필요합니다. (모듈러 연산을 수행하는 값이 바뀌기 때문.)
+        - 이런 재정렬의 과정에서 큰 부하가 발생 → 데이터가 늘어남에 따라 샤딩을 주기적으로 해야하는 상황에서는 불리합니다. → 데이터량이 일정 수준에서 유지될 것으로 예상되는 데이터 성격을 가진 곳에 적용할 때 어울립니다.
+- **레인지 샤딩**
+    - PK의 범위를 기준으로 DB를 특정하는 방식입니다.
+    - 모듈러 샤딩에 비해 기본적으로 증설에 재정렬 비용이 들지 않습니다.
+        - 범위를 이용하니까 나중에 들어온 데이터들의 PK를 증설된 DB 서버로 할당할 수 있기 때문입니다.
+    - 일부 DB에 데이터가 몰릴 수 있습니다.
+    - 큰 장점은 재정렬 비용이 들지 않는다는 점이고 단점은 활성 유저가 몰린 DB로 트래픽이나 데이터량이 몰릴 수 있습니다. → 몰리는 DB를 분산시키고 재정렬하는 과정이 필요합니다. → 따라서 적절한 Range 기준을 잡는 것이 중요합니다.
+        - 데이터가 급격히 증가할 여지가 있다면 레인지 샤딩은 좋은 선택이 될 것입니다.
+- **디렉토리 샤딩**
+    - 별도의 조회 테이블을 사용해서 샤딩을 하 경우입니다.
+    - 샤딩에 사용되는 시스템이나 알고리즘을 사용할 수 있습니다.
+    - 샤드를 동적으로 추가하는 것도 비교적 쉽습니다.
+    - 모든 읽기 및 쓰기 쿼리 전에 조회 테이블을 참조해야 하기 때문에 오버헤드가 발생합니다.
+
 ### 구현
 
 이런 샤딩은 사실 DBMS가 일번적으로 지원하는 기능이 아니기 때문에 ORM을 이용하거나 DB에 접근하는 서버에서 구현해주는 작업이 필요합니다.
