--- a/Java/static/권성준.md
+++ b/Java/static/권성준.md
@@ -1,7 +1,7 @@
 ### 정의
 
 - 프로그램이 실행될 때 클래스가 로딩되는 시점에 메모리에 올라가 프로그램이 종료될 때까지 유지된다.
-- JVM 에서 메서드 영역에 위치하여, 힙 영역의 객체들이 GC 에 의해 관리되는 것과 달리 관리되지 않는다. 그래서 불필요하게 자주 static 영역에 할당하게 되면 프로그램 성능 악화가 일어날 수 있다.
+- JVM 에서 메서드 영역에 위치하여, 힙 영역의 객체들이 GC 에 의해 관리되는 것과 달리 관리되지 않는다.(static 변수와 메서드를 의미하는 것. static 객체는 관리됨.) 그래서 불필요하게 자주 static 영역에 할당하게 되면 프로그램 성능 악화가 일어날 수 있다.
 
 ### 사용 이유
 
