--- a/복습/2일차.md
+++ b/복습/2일차.md
@@ -24,3 +24,11 @@ CGLIB는 바이트 코드를 조작하여 프록시 객체를 생성합니다.
 ```
 수동 등록을 선택하는 이유는 특정 라이브러리나 외부 구성 요소와의 연동이 필요하거나, 복잡한 설정을 해야할 경우 등이 있을 수 있습니다.
 ```
+
+HashTable과 HashMap의 차이점
+```
+1. 동기화
+HashTable은 동기화를 지원하기 때문에 Thread-safe하고, HashMap은 Thread-safe하지 않다는 특징을 가지고 있습니다. 그렇기에 멀티스레드 환경이 아니라면 Hashtable은 HashMap 보다 성능이 떨어진다는 단점을 가지고 있습니다.
+2. Null 허용
+Hashtable은 key에 null을 허용하지 않지만, HashMap은 key에 null을 허용합니다.
+```
