--- a/복습/3일차.md
+++ b/복습/3일차.md
@@ -22,3 +22,80 @@
 
 </div>
 </details>
+
+<details>
+<summary>HTTP 란?</summary>
+<div markdown="1">  
+HTTP(Hypertext Transfer Protocol)는 웹에서 데이터를 주고받기 위한 프로토콜입니다. 클라이언트와 서버 간의 통신을 담당하여 웹 페이지, 이미지, 동영상 등의 리소스를 요청하고 응답하는 역할을 합니다.
+HTTP는 기본적으로 암호화되지 않은 텍스트 기반 프로토콜로, 데이터의 안전성이 보장되지 않습니다.
+  
+특징은 무상태와 비연결성입니다.
+무상태란, HTTP는 요청과 응답 사이에 상태 정보를 것을 말합니다. 
+각각의 요청은 독립적으로 처리되며, 이전 요청과의 관련성을 갖지 않습니다. 이는 서버의 부하를 줄이고 확장성을 향상시키는 장점을 가지고 있습니다. 하지만 상태 정보를 유지해야 하는 경우에는 쿠키 등의 메커니즘을 사용하여 처리할 수 있습니다.
+
+비연결성이란, 클라이언트와 서버 간의 연결을 유지하지 않고, 각각의 요청과 응답을 독립적으로 처리함을 의미합니다. 클라이언트가 서버에 요청을 보내면 서버는 응답을 전송한 후 연결을 끊어버립니다. 이를 통해 리소스를 효율적으로 관리할 수 있습니다.
+</div>
+</details>
+
+<details>
+<summary>HTTP와 HTTPS의 차이는 무엇인가요?</summary>
+<div markdown="1">  
+HTTPS는 SSL(Secure Sockets Layer) 또는 TLS(Transport Layer Security) 프로토콜을 사용하여 통신 내용을 암호화합니다. 따라서 데이터의 안전성을 보장하고 중간에서의 데이터 변조나 도청을 방지합니다.
+</div>
+</details>
+
+<details>
+<summary>HTTP1과 HTTP2의 차이는 무엇인가요?</summary>
+<div markdown="1">  
+HTTP/1.1은 기존의 HTTP 버전으로, 요청과 응답이 순차적으로 이루어집니다. 하나의 요청에 대해 하나의 응답만을 처리하며, 요청을 보낼 때마다 새로운 TCP 연결을 생성합니다.
+HTTP/2는 성능 개선을 위해 도입된 프로토콜로, 요청과 응답을 동시에 처리할 수 있습니다. 이를 위해 하나의 TCP 연결을 유지하고 여러 개의 요청을 병렬로 처리합니다. 또한, 헤더 압축과 서버 푸시 등의 기능이 추가되었습니다.</div>
+</details>
+
+<details>
+<summary>SSL 인증서란 무엇인가요?</summary>
+<div markdown="1">  
+SSL 인증서는 웹사이트의 신원을 확인하고 데이터의 보안을 위해 사용됩니다. 인증서는 인증 기관(Certificate Authority)에 의해 발급되며, 
+공개키/개인키 암호화를 사용하여 웹사이트와 클라이언트 간의 통신을 안전하게 암호화합니다. 
+SSL 인증서는 웹 브라우저에 의해 신뢰할 수 있는 인증 기관의 서명된 인증서로 검증됩니다.
+</div>
+</details>
+
+<details>
+<summary>REST API란 무엇인가요?</summary>
+<div markdown="1">  
+REST(Representational State Transfer)는 분산 시스템에서 리소스를 정의하고 이를 HTTP 프로토콜을 통해 조작하는 아키텍처 스타일입니다. REST API는 이러한 REST 아키텍처를 따르는 웹 서비스 API를 의미합니다.
+REST API는 각 리소스를 고유한 URI(Uniform Resource Identifier)로 표현하고, HTTP 메서드(GET, POST, PUT, DELETE 등)를 사용하여 리소스에 대한 CRUD(Create, Read, Update, Delete) 작업을 수행합니다.
+</div>
+</details>
+
+<details>
+<summary>프로세스와 스레드의 차이점은 무엇인가요?</summary>
+<div markdown="1">  
+프로세스는 운영체제로부터 자원을 할당받아 실행 중인 프로그램의 인스턴스입니다. 각 프로세스는 독립된 메모리 공간을 가지며, 서로 다른 프로세스 간에 데이터를 공유할 수 있는 메커니즘이 필요합니다.
+스레드는 하나의 프로세스 내에서 실행되는 실행 흐름 단위입니다. 하나의 프로세스는 여러 개의 스레드를 가질 수 있으며, 스레드들은 해당 프로세스의 메모리를 공유하여 효율적으로 작업을 수행할 수 있습니다.
+</div>
+</details>
+
+<details>
+<summary>멀티 스레드와 멀티 프로세스의 장단점에 대해 설명해주세요,</summary>
+<div markdown="1">  
+멀티프로세스는 각 프로세스가 독립적인 메모리 공간을 가지기 때문에 안정성이 높고 한 프로세스의 문제가 다른 프로세스에 영향을 주지 않습니다. 하지만 프로세스 간의 통신에는 추가적인 비용과 복잡성이 발생합니다.
+멀티스레드는 하나의 프로세스 내에서 스레드들이 메모리를 공유하므로 데이터 공유가 간편하고 작업 간의 통신이 용이합니다. 하지만 스레드 간의 동기화와 상호간섭 문제에 대한 신경을 써야하며, 한 스레드의 오류가 전체 프로세스에 영향을 줄 수 있습니다.
+</div>
+</details>
+
+<details>
+<summary>크롬 탭은 멀티 스레드인가요 멀티 프로세스 인가요? </summary>
+<div markdown="1">  
+크롬 탭창은 멀티 프로세스입니다. 각 탭은 별도의 프로세스로 실행되어 독립된 메모리 공간을 가지고 있습니다. 멀티스레드보다 안정성이 높고, 하나의 탭에 문제가 발생해도 다른 탭에는 영향을 주지 않습니다.
+</div>
+</details>
+
+<details>
+<summary>멀티 프로세스 환경에서 데이터를 공유하는 방법은 무엇인가요? </summary>
+<div markdown="1">  
+원칙적으로 process는 독립적인 주소 공간을 갖기 때문에, 다른 process의 주소 공간을 참조할 수 없습니다. 
+하지만 경우에 따라 운영체제는 process 간의 자원 접근을 위한 매커니즘인 프로세스 간 통신(IPC, Inter Process Communication)를 제공합니다.
+프로세스 간 통신(IPC) 방법으로는 파이프, 파일, 소켓, 공유메모리 등을 이용한 방법이 있습니다.
+</div>
+</details>
